more gallery blurbs

--- a/source/_galleries/jiji_2019.md
+++ b/source/_galleries/jiji_2019.md
@@ -4,5 +4,11 @@ date: 2019-06-16
 cloud_folder: "jiji"
 slug: "jiji-2019"
 section: travel
-description: "Visiting favourite child and his younger brother in Taiwan"
+description: "Jiji is a small town in Nantou County at the foot of the mountains and fairly close to Yushan National
+Park, home of Taiwan’s tallest peak."
 ---
+
+Despite the constant threat of rain and the odd shower we managed to explore the town and its
+surroundings on bicycles which is always a treat for me. Unfortunately we didn’t have time to ride
+the “Green Tunnel”, a corridor of camphor trees planted in 1940, forming a beautiful green canopy
+over the road. So, again, I will be back!
